--- a/RH_/appsettings.json
+++ b/RH_/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=RH_;Integrated Security=True;Connect Timeout=30"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
